:fire: fixed navbar + liststyle & optimisation

--- a/panier.html
+++ b/panier.html
@@ -11,7 +11,7 @@
     <nav id="menuPanier" class="nav">
         <ul>
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="#nouveaute">Produits</a></li>
+            <li><a href="produit.html">Produits</a></li>
             <li><a href="panier.html">Panier</a></li>
         </ul>
     </nav>
