--- a/produit.html
+++ b/produit.html
@@ -11,22 +11,13 @@
     <nav id="menuProduit" class="nav">
         <ul>
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="#nouveaute">Produits</a></li>
+            <li><a href="produit.html">Produits</a></li>
             <li><a href="panier.html">Panier</a></li>
         </ul>
     </nav>
 
     <main id="produits" class="Produit-container">
     </main>
-    <div style="height: 100vh; width: 100%;">
-        <h1>caca</h1>
-    </div>
-    <div style="height: 100vh; width: 100%;">
-        <h1>caca</h1>
-    </div>
-    <div style="height: 100vh; width: 100%;">
-        <h1>caca</h1>
-    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js"></script>
