:fire: ajout fonctionnel du panier + fonction element intégré au panier

--- a/panier.html
+++ b/panier.html
@@ -21,7 +21,9 @@
         <section id="Panier" class="panier">
             <h1 class="Panier-title">Vos achats</h1>
             <div class="panier-items">
-                <div class="panier-items-preview"></div>
+                <div class="panier-items-preview">
+                    
+                </div>
                 <div class="panier-items-bill">
                     <h1 class="panier-items-bill-title">Total de la commande</h1>
                     <div class="panier-items-bill-price"></div>
