--- a/panier.html
+++ b/panier.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.20/fullpage.min.css">
 </head>
 <body>
     <nav id="menuPanier" class="nav">
@@ -26,18 +25,21 @@
                 </div>
                 <div class="panier-items-bill">
                     <h1 class="panier-items-bill-title">Total de la commande</h1>
-                    <div class="panier-items-bill-price"></div>
-                    <div class="panier-items-bill-taxe"></div>
-                    <div class="panier-items-bill-price"></div>
+                    <div class="panier-items-bill-price">
+                        <p class="panier-items-bill-price-text">Prix</p>
+                    </div>
+                    <div class="panier-items-bill-taxe">
+                        <p class="panier-items-bill-taxe-text">Taxe</p>
+                    </div>
+                    <div class="panier-items-bill-total">
+                        <p class="panier-items-bill-total-text">Total</p>
+                    </div>
                     <button>Procéder au paiement</button>
                 </div>
             </div>
         </section>
     </main>
 
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.20/fullpage.min.js"></script>
     <script src="panier.js"></script>
 </body>
 </html>
