:fire: fix du menu sur index.html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
 </head>
 <body>
     <nav id="menu" class="nav">
-        <ul>
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="produit.html">Produits</a></li>
-            <li><a href="panier.html">Panier</a></li>
-        </ul>
+        <div class="nav-menu">
+            <div class="nav-menu-container">
+                <img src="assets/img/PokeShop.png" alt="Logo" class="nav-menu-container-logo">
+                <ul class="nav-menu-container-list">
+                    <li><a id="menu-container-list-accueil" href="#header">Accueil</a></li>
+                    <li><a id="menu-container-list-nouveaute" href="#nouveaute">Nouveauté</a></li>
+                    <li><a id="menu-container-list-aPropos" href="#about">A propos</a></li>
+                </ul>
+            </div>
+
+            <div class="nav-menu-buttons">
+                <button class="nav-menu-buttons-catalogue">Catalogue</button>
+                <button class="nav-menu-buttons-panier">Panier</button>
+            </div>
+        </div>
     </nav>
 
     <main id="fullpage">
