:fire: mise en page css homepage + fix bugs

--- a/produit.html
+++ b/produit.html
@@ -9,11 +9,21 @@
 </head>
 <body>
     <nav id="menuProduit" class="nav">
-        <ul>
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="produit.html">Produits</a></li>
-            <li><a href="panier.html">Panier</a></li>
-        </ul>
+        <div class="nav-menu">
+            <div class="nav-menu-container">
+                <img src="assets/img/PokeShop.png" alt="Logo" class="nav-menu-container-logo">
+                <ul class="nav-menu-container-list">
+                    <li><a id="menu-container-list-accueil" href="index.html">Accueil</a></li>
+                    <li><a id="menu-container-list-nouveaute" href="index.html">Nouveauté</a></li>
+                    <li><a id="menu-container-list-aPropos" href="index.html">A propos</a></li>
+                </ul>
+            </div>
+
+            <div class="nav-menu-buttons">
+                <a class="nav-menu-buttons-catalogue" href="produit.html"><img src="assets/img/bag-shopping-solid.svg" alt="">Catalogue</a>
+                <a class="nav-menu-buttons-panier" href="panier.html"><img src="assets/img/cart-shopping-solid.svg" alt="">Panier</a>
+            </div>
+        </div>
     </nav>
 
     <main id="produits" class="Produit-container">
