:fire: added responsive on product page + style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <nav id="menu" class="nav">
         <div class="nav-menu">
             <div class="nav-menu-container">
-                <img src="assets/img/PokeShop.png" alt="Logo" class="nav-menu-container-logo">
+                <a href="index.html" class="nav-menu-container-link">
+                    <img src="assets/img/PokeShop.png" alt="Logo" class="nav-menu-container-link-logo">
+                </a>
                 <ul class="nav-menu-container-list">
                     <li><a id="menu-container-list-accueil" href="#header">Accueil</a></li>
                     <li><a id="menu-container-list-nouveaute" href="#nouveaute">Nouveauté</a></li>
