--- a/produit.html
+++ b/produit.html
@@ -11,7 +11,9 @@
     <nav id="menuProduit" class="nav">
         <div class="nav-menu">
             <div class="nav-menu-container">
-                <img src="assets/img/PokeShop.png" alt="Logo" class="nav-menu-container-logo">
+                <a href="index.html" class="nav-menu-container-link">
+                    <img src="assets/img/PokeShop.png" alt="Logo" class="nav-menu-container-link-logo">
+                </a>
                 <ul class="nav-menu-container-list">
                     <li><a id="menu-container-list-accueil" href="index.html">Accueil</a></li>
                     <li><a id="menu-container-list-nouveaute" href="index.html">Nouveauté</a></li>
