:heavy_check_mark: finition du repsonsive + fix bugs

--- a/panier.html
+++ b/panier.html
@@ -30,23 +30,25 @@
     <main id="panier">
     
         <section id="Panier" class="panier">
-            <h1 class="Panier-title">Vos achats</h1>
+            <h1 class="panier-title">Vos achats</h1>
             <div class="panier-items">
                 <div class="panier-items-preview">
                     
                 </div>
                 <div class="panier-items-bill">
                     <h1 class="panier-items-bill-title">Total de la commande</h1>
-                    <div class="panier-items-bill-price">
-                        <p class="panier-items-bill-price-text">Prix</p>
+                    <div class="panier-items-bill-container">
+                        <div class="panier-items-bill-container-price">
+                            <p class="panier-items-bill-container-price-text">Prix</p>
+                        </div>
+                        <div class="panier-items-bill-container-taxe">
+                            <p class="panier-items-bill-container-taxe-text">Taxe</p>
+                        </div>
+                        <div class="panier-items-bill-container-total">
+                            <p class="panier-items-bill-container-total-text">Total</p>
+                        </div>
                     </div>
-                    <div class="panier-items-bill-taxe">
-                        <p class="panier-items-bill-taxe-text">Taxe</p>
-                    </div>
-                    <div class="panier-items-bill-total">
-                        <p class="panier-items-bill-total-text">Total</p>
-                    </div>
-                    <button>Procéder au paiement</button>
+                    <button class="panier-items-bill-button">Procéder au paiement</button>
                 </div>
             </div>
         </section>
